// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['template-loader Template 1'] = `
Array [
  "module.exports = function (__render__ ) {
    // Register render first
    var __render_helpers__ = (function() { var obj = require(\\"../../../render-helpers/src/index.js\\"); return obj && obj.__esModule ? obj.default : obj; })();
    __render_helpers__._r(__render__);
    var _c = __render_helpers__._c;var _s = __render_helpers__._s;var _l = __render_helpers__._l;var _t = __render_helpers__._t;var _m = __render_helpers__._m;var _v = __render_helpers__._v;var _e = __render_helpers__._e;var _cx = __render_helpers__._cx;var _u = __render_helpers__._u;;
  
    // Templates store
    var __templates_ref__ = {};
    function _w(is) { return __templates_ref__[is] ? __templates_ref__[is] : null; }
    
    // Custom components ref
    var __components_ref__ = {};
    
  
    
  
    function render(data) {
      
      return [_c(__components_ref__['view']||'view',[_c(__components_ref__['text']||'text',[_v(\\"hello world\\")])])];
    }
  
    return render;
  }
  
  
  ",
]
`;

exports['template-loader options 1'] = `
Array [
  "module.exports = function (__render__ ) {
    // Register render first
    var __render_helpers__ = (function() { var obj = require(\\"../packages/render-helpers/src/index.js\\"); return obj && obj.__esModule ? obj.default : obj; })();
    __render_helpers__._r(__render__);
    var _c = __render_helpers__._c;var _s = __render_helpers__._s;var _l = __render_helpers__._l;var _t = __render_helpers__._t;var _m = __render_helpers__._m;var _v = __render_helpers__._v;var _e = __render_helpers__._e;var _cx = __render_helpers__._cx;var _u = __render_helpers__._u;;
  
    // Templates store
    var __templates_ref__ = {};
    function _w(is) { return __templates_ref__[is] ? __templates_ref__[is] : null; }
    
    // Custom components ref
    var __components_ref__ = {};
    
  
    
  
    function render(data) {
      
      return _c('page', { 'data-userview-root': 'true' }, null, [_c(__components_ref__['view']||'view',[_c(__components_ref__['text']||'text',[_v(\\"hello world\\")])])]);
    }
  
    return render;
  }
  
  
  ",
]
`;

exports['template-loader web-view 1'] = `
Array [
  "module.exports = function (__render__ ) {
    // Register render first
    var __render_helpers__ = (function() { var obj = require(\\"../../../render-helpers/src/index.js\\"); return obj && obj.__esModule ? obj.default : obj; })();
    __render_helpers__._r(__render__);
    var _c = __render_helpers__._c;var _s = __render_helpers__._s;var _l = __render_helpers__._l;var _t = __render_helpers__._t;var _m = __render_helpers__._m;var _v = __render_helpers__._v;var _e = __render_helpers__._e;var _cx = __render_helpers__._cx;var _u = __render_helpers__._u;;
  
    // Templates store
    var __templates_ref__ = {};
    function _w(is) { return __templates_ref__[is] ? __templates_ref__[is] : null; }
    
    // Custom components ref
    var __components_ref__ = {};
    
  
    
  
    function render(data) {
      
      return [_c(__components_ref__['web-view']||'web-view',{onMessage:this.handleMessage})];
    }
  
    return render;
  }
  
  module.exports.getWebViewSource = function (data) { return \\"http://foo/bar\\"; };
  module.exports.getWebViewOnMessage = function (data) { return \\"handleMessage\\"; };
  ",
]
`;
